2006-07-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c, lib/oci8/metadata.rb: add a type_metadata method
	    to OCI8::Metadata::Table, OCI8::Metadata::View, OCI8::Metadata::TypeAttr,
	    OCI8::Metadata::Collection, OCI8::Metadata::Column, OCI8::Metadata::Argument
	    OCI8::Metadata::TypeArgument and OCI8::Metadata::TypeResult.

2006-07-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/bind.c, ext/oci8/stmt.c,
	    lib/oci8/oci8.rb: Support LONG and LONG RAW longer than 65535 bytes.
	    Add OCI8#long_read_len and OCI8#long_read_len= to set max long
	    length.
	* ext/oci8/oraconf.rb: fix typo.

2006-07-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/rowid.c, ext/oci8/oci8lib.c: change
	    Rowid's internal structure when OCIRowidToChar is available.
	    The new structure can be passed to Marshal.
	* VERSION, Makefile, ext/oci8/extconf.rb: 
	    read version string from the VERSION file.

2006-06-27  KUBO Takehiro  <kubo@jiubao.org>
	Many method move to C layer. Add support of Timestamp, Interval
	year to month and Interval day to second. Oracle's Date become
	DateTime instead of OraDate.
	* ext/oci8/env.c: 1. delete code registering ruby_xmalloc(),
	    ruby_xrealloc() and ruby_xfree() to OCI library. These
	    API cannot be called only in ruby VM's native thread.
	    2. add workaround code to avoid breaking ENV.
	* ext/oci8/oci8.c: move OCI8#parse from ruby to C layer.
	* ext/oci8/oci8.h, ext/oci8/oci8lib.c: add oci8_id_* variables.
	* ext/oci8/ocidatetime.c: delete OCIDateTime and OCIInterval.
	    add OCI8::BindType::DateTime, OCI8::BindType::IntervalYM and
	    OCI8::BindType::IntervalDS.
	* ext/oci8/ocinumber.c: delete OCI8::Math::E, OCINumber#trunc
	    and OCINumber#sign. add OCINumber#truncate and
	    OCI8::BindType::Integer.
	* ext/oci8/oraconf.rb:fix for OracleXE windows version. OracleXE's
	    registry path is \\HKEY_LOCAL_MACHINE\SOFTWARE\ORACLE\KEY_XE.