@@ -39,14 +39,10 @@ static ora_vnumber_t *get_ora_number(VALUE self)
     return ovn;
 }
 
-static VALUE make_ora_number(const ora_vnumber_t *ovn)
+static VALUE ora_number_s_allocate(klass)
 {
-    VALUE obj;
-    ora_vnumber_t *newovn;
-
-    obj = Data_Make_Struct(cOraNumber, ora_vnumber_t, NULL, xfree, newovn);
-    memcpy(newovn, ovn, sizeof(ora_vnumber_t));
-    return obj;
+  ora_vnumber_t *ovn;
+  return Data_Make_Struct(klass, ora_vnumber_t, NULL, xfree, ovn);
 }
 
 /*
@@ -54,19 +50,32 @@ static VALUE make_ora_number(const ora_vnumber_t *ovn)
 --- OraNumber.new()
 =end
 */
-static VALUE ora_number_s_new(int argc, VALUE *argv, VALUE klass)
+static VALUE ora_number_initialize(int argc, VALUE *argv, VALUE self)
 {
-    ora_vnumber_t ovn;
+    ora_vnumber_t *ovn = get_ora_number(self);
 
-    ovn.size = 1;
-    ovn.num.exponent = 0x80;
-    memset(ovn.num.mantissa, 0, sizeof(ovn.num.mantissa));
-    return make_ora_number(&ovn);
+    ovn->size = 1;
+    ovn->num.exponent = 0x80;
+    memset(ovn->num.mantissa, 0, sizeof(ovn->num.mantissa));
+    return Qnil;
 }
+
+static VALUE ora_number_initialize_copy(VALUE lhs, VALUE rhs)
+{
+    ora_vnumber_t *l, *r;
+
+    /* ruby 1.8 */
+    rb_obj_init_copy(lhs, rhs);
+    Data_Get_Struct(lhs, ora_vnumber_t, l);
+    Data_Get_Struct(rhs, ora_vnumber_t, r);
+    memcpy(l, r, sizeof(ora_vnumber_t));
+    return lhs;
+}  
 
 static VALUE ora_number_clone(VALUE self)
 {
-    return make_ora_number(get_ora_number(self));
+    VALUE obj = ora_number_s_allocate(CLASS_OF(self));
+    return ora_number_initialize_copy(obj, self);
 }
 
 /*
@@ -138,6 +147,27 @@ static VALUE ora_number_uminus(VALUE self)
     return obj;
 }
 
+static VALUE ora_number_dump(int argc, VALUE *argv, VALUE self)
+{
+    ora_vnumber_t *ovn = get_ora_number(self);
+    return rb_str_new((const char*)ovn, sizeof(ora_vnumber_t));
+}  
+
+static VALUE ora_number_s_load(VALUE klass, VALUE str)
+{
+    ora_vnumber_t *ovn;
+    VALUE obj;
+
+    StringValue(str);
+    if (RSTRING(str)->len != sizeof(ora_vnumber_t)) {
+        rb_raise(rb_eTypeError, "marshaled OraNumber format differ");
+    }
+    obj = ora_number_s_allocate(klass);
+    ovn = get_ora_number(obj);
+    memcpy(ovn, RSTRING(str)->ptr, sizeof(ora_vnumber_t));
+    return obj;
+}  
+
 /*
  * bind_oranumber
  */
@@ -187,11 +217,15 @@ void Init_ora_number(void)
 {
     cOraNumber = rb_define_class("OraNumber", rb_cObject);
 
-    rb_define_singleton_method(cOraNumber, "new", ora_number_s_new, -1);
+    rb_define_alloc_func(cOraNumber, ora_number_s_allocate);
+    rb_define_method(cOraNumber, "initialize", ora_number_initialize, -1);
+    rb_define_method(cOraNumber, "initialize_copy", ora_number_initialize_copy, 1);
     rb_define_method(cOraNumber, "to_i", ora_number_to_i, 0);
     rb_define_method(cOraNumber, "to_f", ora_number_to_f, 0);
     rb_define_method(cOraNumber, "to_s", ora_number_to_s, 0);
     rb_define_method(cOraNumber, "-@", ora_number_uminus, 0);
+    rb_define_method(cOraNumber, "_dump", ora_number_dump, -1);
+    rb_define_singleton_method(cOraNumber, "_load", ora_number_s_load, 1);
 
     oci8_define_bind_class("OraNumber", &bind_oranumber_class);
 }
